# Polygonal-Watercolour

./: CMakeLists.txt  README.md
framework/: CMakeLists.txt
framework/include/framework/: disable_all_warnings.h
framework/src/: window.cpp
src/: canvas.hpp  main.cpp  splat.hpp  stamp.hpp  style.hpp
